--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ a{text-decoration: none;}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About Me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>LALALALALA
+    <p>Hello my name is Aaron, I'm a small web developer, Im 13 years old, and I'm from the UK, I aspire to become a succesfull Full Stack Web Developer in the future, I love to problem solve and I'm a big fan of coding. I love HTML, JS and CSS, I find these languages intriguing and fun to learn. Thank you for taking your time to check this website out!
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Photography</p>
@@ -180,7 +180,7 @@ a{text-decoration: none;}
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/a_aron360" target="_blank"></a>
     <a class="fa fa-snapchat w3-hover-opacity" href="https://www.snapchat.com/add/a-aron353" target="_blank"></a>
-    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/techyaaron-merchant-834608214/" target="_blank"></a>
+    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/techyaaron-merchant-834608214/"target="_blank"></a>
     <p class="w3-medium">Designed and Created by Aaron.M</p>
   <!-- End footer -->
   </footer>
