--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ a{text-decoration: none;}
 
     <div class="w3-section">
       <a href="https://goo.gl/maps/tUBQFye1BJAu61JJ6" target="_blank"><p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> London, UK</p></a>
-      <a href = "mailto: abc@example.com"><p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: aaronrogerz360@gmail.com</p></a>
+      <a href = "mailto: aaronrogerz360@gmail.com"><p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: aaronrogerz360@gmail.com</p></a>
     </div><br>
 
     <iframe width="1920px" height= "1080px" src= "https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAN__jWPh2tUODgwTzk2TzVJNzM4NjJVU1ZBVkpCWTk3Mi4u&embed=true" frameborder= "0" marginwidth= "0" marginheight= "0" style= "border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
@@ -180,7 +180,7 @@ a{text-decoration: none;}
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
     <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/a_aron360" target="_blank"></a>
     <a class="fa fa-snapchat w3-hover-opacity" href="https://www.snapchat.com/add/a-aron353" target="_blank"></a>
-    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/techyaaron-merchant-834608214/"target="_blank"></a>
+    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/aaron-merchant-834608214/"target="_blank"></a>
     <p class="w3-medium">Designed and Created by Aaron.M</p>
   <!-- End footer -->
   </footer>
