--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ a{text-decoration: none;}
     <p>Hello my name is Aaron, I'm a small web developer, Im 13 years old, and I'm from the UK, I aspire to become a succesfull Full Stack Web Developer in the future, I love to problem solve and I'm a big fan of coding. I love HTML, JS and CSS, I find these languages intriguing and fun to learn. Thank you for taking your time to check this website out!
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
-    <p class="w3-wide">Photography</p>
+    <p class="w3-wide">Video Editing</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:20%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:40%"></div>
     </div>
     <p class="w3-wide">Web Design</p>
     <div class="w3-white">
