--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ a{text-decoration: none;}
     <style> 
 .center{
   position: absolute;
-  top: 4%;
+  top: 5%;
   left: 53%;
   transform: translate(-50%, -50%);
 }
@@ -91,7 +91,7 @@ label span{
   color: white;
   z-index: 2;
 }
-label span{
+label span:hover{
   filter: blur(1px);
 }
 .text label::before,
@@ -102,15 +102,15 @@ label span{
   left: 0;
   visibility: hidden;
 }
-.text label::before,
-.text label::after{
+.text:hover label::before,
+.text:hover label::after{
   visibility: visible;
 }
-.text label::before{
+.text:hover label::before{
   color: rgba(255,0,188,.8);
   animation: glitch .3s cubic-bezier(.25,.46,.45,.94) both infinite;
 }
-.text label::after{
+.text:hover label::after{
   color: rgba(0,255,255,.8);
   animation: glitch .3s cubic-bezier(.25,.46,.45,.94) reverse both infinite;
 }
@@ -134,6 +134,7 @@ label span{
     transform: translate(0);
   }
 }
+
     </style>
 
 
